--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brincadeira de Login</title>
+    <title>Jogo de Batalha Multplayer</title>
     <style>
         body {
             font-family: 'Poppins', sans-serif;
